# crewAI_amy

./: main.py  pyproject.toml
amy/: README.md  pyproject.toml  report.md
amy/src/amy/: crew.py  gui_viewer.py  main.py
amy/src/amy/config/: agents.yaml  filter_agents.yaml  filter_tasks.yaml  reply_agents.yaml  reply_tasks.yaml  tasks.yaml  triage_agents.yaml  triage_tasks.yaml
amy/src/amy/tools/: check_email_body.py  outlook_reply_tool.py  outlook_tool.py
